--- a/main.css
+++ b/main.css
@@ -9,11 +9,16 @@ body {
   align-items: center;
 
   margin-bottom: 20px;
+
 }
 
 circle:hover {
   cursor: pointer;
 
+}
+
+circle.hidden {
+  opacity: 0.3;
 }
 
 #charts {
@@ -51,5 +56,7 @@ circle:hover {
     font-size:xx-large
   }
 }
+
+
 
 /* click interactivity, change color of toggle */
