minor change to style again

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 
 #legends {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 333px) 1fr;
   gap: 0.5em;
   margin-bottom: 20px;
   justify-items: center;
