--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
 
 body {
   font: 100%/1.5 system-ui;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 #legends {
@@ -37,6 +40,7 @@ circle.hidden {
   grid-template-columns: 1fr 20%;
   justify-items: center;
   align-items: center;
+  padding: 3ch;
 
   #act-plot {
     grid-row: 1;
@@ -75,6 +79,17 @@ h1 {
 }
 
 p {
-  margin: 0;
+  margin: 20px;
 }
 
+h3 {
+  margin: 20px;
+}
+
+#desc {
+  text-align: center;
+}
+
+#writeup {
+  margin: 20px;
+}
